--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,8 @@ security:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
             logout:
+                # configuration de la sécurité csrf_token pour la déconnection
+                csrf_token_generator: Symfony\Component\Security\Csrf\CsrfTokenManagerInterface
                 path: app_logout
                 # where to redirect after logout
                 # target: app_any_route
